--- a/productos.html
+++ b/productos.html
@@ -568,7 +568,7 @@
       width: 400px;
       height: 300px;
       background: 
-        url('/img/boldadecomprasco.png')
+        url('img/boldadecomprasco.png')
         center/cover no-repeat;
       margin-bottom: 20px;
       border-radius: 10px;
@@ -1302,7 +1302,7 @@
     .header-image .header-image-right {
       width: 770px;
       height: 750px;
-      background: url('/img/cocodriloproductos.png') center/contain no-repeat;
+      background: url('img/cocodriloproductos.png') center/contain no-repeat;
       border-radius: 20px;
       transform: translateX(-210px) translateY(-25px);;
     }
@@ -1707,7 +1707,7 @@
       width: 400px;
       height: 500px;
       background: 
-        url('/img/sinproductos.png')
+        url('img/sinproductos.png')
         center/contain no-repeat;
       margin-bottom: 30px;
       border-radius: 10px;
@@ -1797,7 +1797,7 @@
 
     .footer-section {
       background: 
-        url('/img/nutriblanco.jpeg')
+        url('img/nutriblanco.jpeg')
         center/700px 450px no-repeat;
       padding: 60px 0 30px;
       border-top: 1px solid #eee;
@@ -2529,7 +2529,7 @@
       }
       
       .header-image .header-image-right {
-        background: url('/img/imagenMovil3d.png') center/contain no-repeat;
+        background: url('img/imagenMovil3d.png') center/contain no-repeat;
         max-width: 300px;
         transform: translateX(-20px);
       }
@@ -2629,7 +2629,7 @@
       }
       
       .header-image .header-image-right {
-      background: url('/img/cocodriloproductos.png') center/contain no-repeat;
+      background: url('img/cocodriloproductos.png') center/contain no-repeat;
         max-width: 300px;
         transform: translateX(-25px);
       }
