--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <a href="productos.html">Productos</a>
         </div>
         <div class="nav-item">
-          <a href="mantenimiento.html">Sobre Nosotros</a>
+          <a href="sobrenosotros.html">Sobre Nosotros</a>
         </div>
       </nav>
 
@@ -113,7 +113,7 @@
     </div>
     
     <div class="mobile-nav-item">
-      <a href="mantenimiento.html">Sobre Nosotros</a>
+      <a href="sobrenosotros.html">Sobre Nosotros</a>
     </div>
     
     <div class="mobile-nav-item">
