--- a/productos.html
+++ b/productos.html
@@ -2753,7 +2753,7 @@
     </div>
     
     <div class="mobile-nav-item">
-      <a href="mantenimiento.html">Preguntas Frecuentes</a>
+      <a href="preguntasfrecuentes.html">Preguntas Frecuentes</a>
     </div>
     
     <div class="mobile-nav-item">
@@ -2903,7 +2903,7 @@
 
       <nav class="header-nav nav-right">
         <div class="nav-item">
-          <a href="mantenimiento.html">Preguntas Frecuentes</a>
+          <a href="preguntasfrecuentes.html">Preguntas Frecuentes</a>
         </div>
         <div class="nav-item">
           <a href="contacto.html">Contacto</a>
