actualizacion cambio de colores

--- a/checkout.html
+++ b/checkout.html
@@ -747,7 +747,7 @@
 
     .nav-btn {
       flex: 1;
-      background: #295732;
+      background: #C9B656;
       color: white;
       border: none;
       padding: 16px;
@@ -760,17 +760,17 @@
     }
 
     .nav-btn:hover {
-      background: #295732;
+      background: #C9B656;
       transform: translateY(-3px);
     }
 
     .nav-btn-secondary {
-      background: #A8C9A8;
-      color: #333;
+      background: #C9B656;
+      color: white;
     }
 
     .nav-btn-secondary:hover {
-      background: #A8C9A8;
+      background: #C9B656;
     }
 
     .nav-btn:disabled {
@@ -1233,7 +1233,7 @@
           </form>
           
           <div class="checkout-navigation">
-            <button class="nav-btn nav-btn-secondary" id="backToCartBtnFull">Volver al carrito</button>
+            <button class="nav-btn nav-btn-secondary" id="backToCartBtnFull">Volver</button>
             <button class="nav-btn" id="continueToPaymentFullBtn">Continuar al pago</button>
           </div>
         </div>
