--- a/productos.html
+++ b/productos.html
@@ -98,7 +98,7 @@
     .nav-item > a {
       text-decoration: none;
       color: #333;
-      font-size: 18px;
+      font-size: 19px;
       font-weight: 500;
       transition: color 0.3s ease;
       padding: 12px 0;
@@ -1797,8 +1797,8 @@
 
     .footer-section {
       background: 
-        url('img/nutriblanco.jpeg')
-        center/700px 450px no-repeat;
+        url('img/nutriblanco.png')
+        center/600px 450px no-repeat;
       padding: 60px 0 30px;
       border-top: 1px solid #eee;
       position: relative;
@@ -2443,6 +2443,14 @@
     }
 
     @media (max-width: 480px) {
+      .footer-section {
+      background: 
+        url('img/nutriblanco.png')
+        center/600px 500px no-repeat;
+      padding: 60px 0 30px;
+      border-top: 1px solid #eee;
+      position: relative;
+    }
        input[type="text"],
   input[type="search"],
   input[type="email"],
@@ -2599,6 +2607,14 @@
     }
 
     @media (max-width: 360px) {
+      .footer-section {
+      background: 
+        url('img/nutriblanco.png')
+        center/500px 400px no-repeat;
+      padding: 60px 0 30px;
+      border-top: 1px solid #eee;
+      position: relative;
+    }
        input[type="text"],
   input[type="search"],
   input[type="email"],
@@ -2891,8 +2907,8 @@
           <a href="#">Productos</a>
         </div>
         <div class="nav-item">
-          <a href="sobrenosotros.html">Sobre Nosotros</a>
         </div>
+        
       </nav>
 
       <div class="header-center">
@@ -2905,8 +2921,8 @@
         <div class="nav-item">
           <a href="preguntasfrecuentes.html">Preguntas Frecuentes</a>
         </div>
-        <div class="nav-item">
-          <a href="contacto.html">Contacto</a>
+       <div class="nav-item">
+          <a href="sobrenosotros.html">Sobre Nosotros</a>
         </div>
       </nav>
       
