actualizacion cambio de pedidos por un usuario

--- a/preguntasfrecuentes.html
+++ b/preguntasfrecuentes.html
@@ -49,7 +49,7 @@
 
     body {
       font-family: 'Playfair Display', serif;
-      background: #9ACD32; /* Color de fondo que combina con el banner (#A8C9A8) */
+      background: #e3efe3; /* Color de fondo que combina con el banner (#A8C9A8) */
       margin: 0;
       padding: 0;
       color: #333;
@@ -1439,7 +1439,7 @@
 
     .card {
       flex: 1;
-      background: linear-gradient(160deg, #7FAF2F, #7FAF2F);
+      background: linear-gradient(160deg,#b6d4b6, #9fbea1);
       border-radius: 26px;
       padding: 28px 22px;
       cursor: pointer;
@@ -2181,38 +2181,7 @@
   </section>
 
   <!-- Footer -->
-  <div class="footer-section">
-    <div class="footer-container">
-      <div class="footer-left">
-        <h2 class="footer-title">Nutricroc</h2>
-        <h3 class="footer-subtitle">Síguenos</h3>
-        <div class="social-icons">
-          <a href="#" class="social-icon">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="#" class="social-icon">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#" class="social-icon">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="#" class="social-icon">
-            <i class="fab fa-pinterest"></i>
-          </a>
-        </div>
-      </div>
-      
-      <div class="footer-right">
-        <h3 class="footer-subtitle">Recibe Nuestras Noticias Dulces</h3>
-        <form class="newsletter-form">
-          <input type="email" class="newsletter-input" placeholder="Tu Dirección de Email" required>
-          <button type="submit" class="newsletter-btn">Suscribirse</button>
-        </form>
-      </div>
-    </div>
-    <div class="footer-bottom">
-    </div>
-  </div>
+  
 
   <button class="scroll-to-top" id="scrollToTop">
     <i class="fas fa-chevron-up"></i>
