--- a/producto.html
+++ b/producto.html
@@ -1636,12 +1636,12 @@
 
     /* ===== FOOTER ===== */
     .footer-section {
-      background: url('img/nutriblanco.png') center/600px 450px no-repeat;
-      padding: 60px 0 30px;
-      border-top: 1px solid #eee;
-      position: relative;
-      width: 100%;
-      overflow: hidden;
+      background: 
+    url('https://i.postimg.cc/4x7zrHsP/nutriblanco.jpg')
+    center/700px 450px no-repeat;
+  padding: 60px 0 30px;
+  border-top: 1px solid #eee;
+  position: relative;
     }
 
     .footer-section::before {
@@ -2076,14 +2076,7 @@
     }
 
     @media (max-width: 480px) {
-        .footer-section {
-      background: 
-        url('img/nutriblanco.png')
-        center/600px 500px no-repeat;
-      padding: 60px 0 30px;
-      border-top: 1px solid #eee;
-      position: relative;
-    }
+       
       .cart-empty-image {
     width: 300px;
     height: 250px;
@@ -2227,14 +2220,7 @@
 
 
     @media (max-width: 360px) {
-        .footer-section {
-      background: 
-        url('img/nutriblanco.png')
-        center/500px 400px no-repeat;
-      padding: 60px 0 30px;
-      border-top: 1px solid #eee;
-      position: relative;
-    }
+
       .cart-item-actions {
       display: flex;
       gap: 40px; /* Aumentado de 10px a 15px para separar más los iconos */
