--- a/productos.html
+++ b/productos.html
@@ -1796,12 +1796,12 @@
     }
 
     .footer-section {
-      background: 
-        url('img/nutriblanco.png')
-        center/600px 450px no-repeat;
-      padding: 60px 0 30px;
-      border-top: 1px solid #eee;
-      position: relative;
+     background: 
+    url('https://i.postimg.cc/4x7zrHsP/nutriblanco.jpg')
+    center/700px 450px no-repeat;
+  padding: 60px 0 30px;
+  border-top: 1px solid #eee;
+  position: relative;
     }
 
     .footer-section::before {
@@ -2443,14 +2443,7 @@
     }
 
     @media (max-width: 480px) {
-      .footer-section {
-      background: 
-        url('img/nutriblanco.png')
-        center/600px 500px no-repeat;
-      padding: 60px 0 30px;
-      border-top: 1px solid #eee;
-      position: relative;
-    }
+      
        input[type="text"],
   input[type="search"],
   input[type="email"],
@@ -2607,14 +2600,7 @@
     }
 
     @media (max-width: 360px) {
-      .footer-section {
-      background: 
-        url('img/nutriblanco.png')
-        center/500px 400px no-repeat;
-      padding: 60px 0 30px;
-      border-top: 1px solid #eee;
-      position: relative;
-    }
+     
        input[type="text"],
   input[type="search"],
   input[type="email"],
