--- a/prueba.html
+++ b/prueba.html
@@ -23,7 +23,7 @@
 
     body {
       font-family: 'Playfair Display', serif;
-      background: #e3efe3;
+      background: #9ACD32;
       color: #333;
       line-height: 1.6;
       overflow-x: hidden;
@@ -191,7 +191,7 @@
 
     .user-sidebar {
       flex: 0 0 280px;
-      background: #f5f9f5;
+      background: #7FAF2F;
       border-radius: 10px;
       box-shadow: 0 2px 15px rgba(0,0,0,0.05);
       padding: 30px;
@@ -240,7 +240,7 @@
       align-items: center;
       padding: 15px 20px;
       text-decoration: none;
-      color: #555;
+      color: #295732;
       border-radius: 8px;
       transition: all 0.3s ease;
       font-size: 16px;
@@ -256,7 +256,7 @@
     }
 
     .user-menu-link:hover, .user-menu-link.active {
-      background: #e8f0e8;
+      background: #7FAF2F;
       color: #295732;
     }
 
@@ -267,7 +267,7 @@
 
     .user-content {
       flex: 1;
-      background: #f5f9f5;
+      background: #7FAF2F;
       border-radius: 10px;
       box-shadow: 0 2px 15px rgba(0,0,0,0.05);
       padding: 40px;
@@ -398,7 +398,7 @@
     }
 
     .order-card {
-      background: #eef4ee;
+      background: #6B8E23;
       border-radius: 10px;
       padding: 20px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.03);
