--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -1236,7 +1236,7 @@
 
     /* ===== SECCIÓN "OUR STORY" ===== */
     .story-section {
-      background-color: #9ACD32 ; /* Verde claro que combina con el header */
+      background-color: #C3DEB3; /* Verde claro que combina con el header */
       padding: 100px 20px;
       width: 100%;
       display: flex;
@@ -1267,7 +1267,7 @@
       left: 0;
       width: 100%;
       height: 100px;
-      background: #9ACD32;
+      background: #C3DEB3;
       border-radius: 50% 50% 0 0;
       z-index: 1;
     }
@@ -1432,7 +1432,7 @@
 
     /* ===== NUEVA SECCIÓN "OUR STANDARDS" ===== */
     .standards-section {
-      background-color: #7FAF2F; /* Verde muy claro */
+      background-color: #F5F7F2; /* Verde muy claro */
       padding: 120px 20px;
       width: 100%;
       display: flex;
@@ -1451,7 +1451,7 @@
       left: 0;
       width: 100%;
       height: 100px;
-      background: #9ACD32;
+      background:  #C3DEB3;
       border-radius: 0 0 50% 50%;
       z-index: 1;
     }
@@ -1464,7 +1464,7 @@
       left: 0;
       width: 100%;
       height: 100px;
-      background: #7FAF2F;
+      background: #F5F7F2;
       border-radius: 50% 50% 0 0;
       z-index: 1;
     }
@@ -1549,7 +1549,7 @@
       width: 100%;
       height: 100%;
       background: 
-        linear-gradient(90deg,rgba(218, 165, 32, 0.8) 0%, rgba(218, 165, 32, 0.4) 30%, rgba(232, 245, 232, 0) 70%),
+        linear-gradient(90deg, rgba(232, 245, 232, 0.8) 0%, rgba(232, 245, 232, 0.4) 30%, rgba(232, 245, 232, 0) 70%),
         url('img/standards-bg.jpg') center/cover no-repeat;
       filter: brightness(0.9) contrast(0.9);
       z-index: 1;
@@ -1578,7 +1578,7 @@
 
     /* ===== NUEVA SECCIÓN "OUR MISSION" MODIFICADA ===== */
     .mission-section {
-      background-color: #9ACD32; /* Verde diferente pero que combina */
+      background-color: #C3DEB3;/* Verde diferente pero que combina */
       padding: 120px 20px;
       width: 100%;
       display: flex;
@@ -1596,7 +1596,7 @@
       left: 0;
       width: 100%;
       height: 100px;
-      background: #7FAF2F;
+      background:  #F5F7F2;
       border-radius: 0 0 50% 50%;
       z-index: 1;
     }
@@ -1609,7 +1609,7 @@
       left: 0;
       width: 100%;
       height: 100px;
-      background: #9ACD32;
+      background: #C3DEB3;
       border-radius: 50% 50% 0 0;
       z-index: 1;
     }
